[metadata]
name = vnpy_tqsdk_free
version = 2.8.6
url = https://www.vnpy.com
license = MIT
author = yali
author_email = xiongshaopan@gmail.com
description = TQsdk_Free datafeed for vn.py quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    tqsdk
